--- a/views/index.html
+++ b/views/index.html
@@ -1174,26 +1174,29 @@
             <!-- INPUT FORMS -->
             <div
               id="form-container"
-              class="d-flex flex-row justify-content-center flex-wrap"
+              class="d-flex flex-row justify-content-center align-items-start flex-wrap"
             >
               <!-- PUZZLE SOLVE FORM -->
-              <form id="solve-form">
-                <h4>Solve Sudoku</h4>
-                <p><code>POST /api/solve</code></p>
-                <textarea
-                  id="text-input"
-                  rows="3"
-                  class="form-control form-control-sm"
-                  name="puzzle"
-                  required
-                ></textarea>
-                <input
-                  id="solve-button"
-                  class="btn btn-sm btn-success"
-                  type="button"
-                  value="Solve"
-                />
-              </form>
+              <div id="solve-form-container">
+                <form id="solve-form">
+                  <h4>Solve Sudoku</h4>
+                  <p><code>POST /api/solve</code></p>
+                  <textarea
+                    id="text-input"
+                    rows="3"
+                    class="form-control form-control-sm"
+                    name="puzzle"
+                    required
+                  ></textarea>
+                  <input
+                    id="solve-button"
+                    class="btn btn-sm btn-success"
+                    type="button"
+                    value="Solve"
+                  />
+                </form>
+                <div id="puzzle-str-err"></div>
+              </div>
 
               <!-- MOVE CHECK FORM -->
               <form id="check-form">
@@ -1231,16 +1234,29 @@
               </form>
             </div>
             <!-- INFO / ERROR MESSAGES SHOW HERE -->
-            <div id="response-display">
-              <p>
-                Response:
+            <div
+              id="response-display"
+              class="d-flex flex-row justify-content-center align-items-start"
+            >
+              <h6>
+                API Response:
+                <br />
                 <span id="response">Submit a form to view response</span>
-              </p>
+              </h6>
             </div>
           </div>
         </div>
       </main>
     </div>
+
+    <!-- Bootstrap Script -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- CUSTOM SUDOKU SCRIPTS -->
+    <script type="module" src="../public/index.js"></script>
   </body>
-  <script type="module" src="../public/index.js"></script>
 </html>
